adding a new string for customizing notifications

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -488,6 +488,7 @@
     <string name="customize_colors">تخصيص الألوان</string>
     <string name="customize_colors_locked">تخصيص الألوان (Locked)</string>
     <string name="customize_widget_colors">تخصيص ألوان الويدجت</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">إستخدام اللغة الإنجليزية</string>
     <string name="show_hidden_items">إظهار العناصر المخفية</string>
     <string name="font_size">حجم الخط</string>
