--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Rəngləri dəyiş</string>
     <string name="customize_colors_locked">Rəngləri dəyiş (Locked)</string>
     <string name="customize_widget_colors">Widget rənglərini dəyiş</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">İngilis dilində işlət</string>
     <string name="show_hidden_items">Gizli faylları göstər</string>
     <string name="font_size">Yazı ölçüsü</string>
