--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Canviar colors</string>
     <string name="customize_colors_locked">Canviar colors (Bloquejat)</string>
     <string name="customize_widget_colors">Personalitza els colors de widgets</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Usar l’idioma Anglès</string>
     <string name="show_hidden_items">Mostra elements ocults</string>
     <string name="font_size">Mida de la font</string>
