--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -523,6 +523,7 @@
     <string name="customize_colors">Přizpůsobit barvy</string>
     <string name="customize_colors_locked">Přizpůsobit barvy (Uzamčeno)</string>
     <string name="customize_widget_colors">Přizpůsobit barvy widgetů</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Použít angličtinu</string>
     <string name="show_hidden_items">Zobrazit skryté položky</string>
     <string name="font_size">Velikost písma</string>
