--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -614,6 +614,7 @@
     <string name="customize_colors">Addasu lliwiau</string>
     <string name="customize_colors_locked">Addasu lliwiau (Locked)</string>
     <string name="customize_widget_colors">Addasu lliwiau teclyn</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Defnyddio Saesneg</string>
     <string name="show_hidden_items">Dangos eitemau cudd</string>
     <string name="font_size">Maint ffont</string>
