--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Pertsonalizatu koloreak</string>
     <string name="customize_colors_locked">Pertsonalizatu koloreak (Locked)</string>
     <string name="customize_widget_colors">Pertsonalizatu widgeten koloreak</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Erabili ingeles hizkuntza</string>
     <string name="show_hidden_items">Erakutsi ezkutatutako elementuak</string>
     <string name="font_size">Letra-tamaina</string>
