--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Muokkaa sovelluksen värejä</string>
     <string name="customize_colors_locked">Muokkaa sovelluksen värejä (Locked)</string>
     <string name="customize_widget_colors">Mukauta pienoissovelluksen värejä</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Käytä englannin kieltä</string>
     <string name="show_hidden_items">Näytä piilotetut tiedostot</string>
     <string name="font_size">Fonttikoko</string>
