--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -492,6 +492,7 @@
     <string name="customize_colors">Modifier les couleurs</string>
     <string name="customize_colors_locked">Modifier les couleurs (Locked)</string>
     <string name="customize_widget_colors">Modifier les couleurs du widget</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Utiliser la langue anglaise</string>
     <string name="show_hidden_items">Afficher les fichiers cachés</string>
     <string name="font_size">Taille de la police</string>
