--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Cambiar cores</string>
     <string name="customize_colors_locked">Cambiar cores (Locked)</string>
     <string name="customize_widget_colors">Personalizar cores do widget</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Usar o idioma inglés</string>
     <string name="show_hidden_items">Amosar elementos ocultos</string>
     <string name="font_size">Tamaño da fonte</string>
