--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -521,6 +521,7 @@
     <string name="customize_colors">Prilagodi boje</string>
     <string name="customize_colors_locked">Prilagodi boje (Locked)</string>
     <string name="customize_widget_colors">Prilagodi boje widgeta</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Koristi Engleski jezik</string>
     <string name="show_hidden_items">Prikaži skrivene stavke</string>
     <string name="font_size">Veličina fonta</string>
