--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -458,6 +458,7 @@
     <string name="customize_colors">Sesuaikan warna</string>
     <string name="customize_colors_locked">Sesuaikan warna (Locked)</string>
     <string name="customize_widget_colors">Sesuaikan warna widget</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Gunakan bahasa Inggris</string>
     <string name="show_hidden_items">Tampilkan item tersembunyi</string>
     <string name="font_size">Ukuran fon</string>
