--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Personalizza i colori</string>
     <string name="customize_colors_locked">Personalizza i colori (Locked)</string>
     <string name="customize_widget_colors">Personalizza i colori del widget</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Usa la lingua inglese</string>
     <string name="show_hidden_items">Mostra gli elementi nascosti</string>
     <string name="font_size">Dimensione carattere</string>
