--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -514,6 +514,7 @@
     <string name="customize_colors">Spalvų redagavimas</string>
     <string name="customize_colors_locked">Spalvų redagavimas (Locked)</string>
     <string name="customize_widget_colors">Customize widget colors</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Naudoti anglų kalbą</string>
     <string name="show_hidden_items">Rodyti paslėptus elementus</string>
     <string name="font_size">Teksto dydis</string>
