--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -523,6 +523,7 @@
     <string name="customize_colors">Upraviť farby</string>
     <string name="customize_colors_locked">Upraviť farby (Uzamknuté)</string>
     <string name="customize_widget_colors">Upraviť farby widgetov</string>
+    <string name="customize_notifications">Upraviť pripomienky</string>
     <string name="use_english_language">Použiť angličtinu</string>
     <string name="show_hidden_items">Zobraziť skryté položky</string>
     <string name="font_size">Veľkosť písma</string>
