--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -553,6 +553,7 @@
     <string name="customize_colors">Prilagodite barve</string>
     <string name="customize_colors_locked">Prilagodite barve (Locked)</string>
     <string name="customize_widget_colors">Prilagodite barve pripomočka</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Uporabljaj angleški jezik</string>
     <string name="show_hidden_items">Prikaži skrite elemente</string>
     <string name="font_size">Velikost pisave</string>
