--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -489,6 +489,7 @@
     <string name="customize_colors">Прилагодите боје</string>
     <string name="customize_colors_locked">Прилагодите боје (Locked)</string>
     <string name="customize_widget_colors">Прилагодите боје виџета</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Користи енглески језик</string>
     <string name="show_hidden_items">Прикажи скривене ставке</string>
     <string name="font_size">Величина фонта</string>
