--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Anpassa färger</string>
     <string name="customize_colors_locked">Anpassa färger (Locked)</string>
     <string name="customize_widget_colors">Anpassa widgetarnas färger</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Använd engelska</string>
     <string name="show_hidden_items">Visa dolda objekt</string>
     <string name="font_size">Teckenstorlek</string>
