--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Tùy chỉnh màu sắc</string>
     <string name="customize_colors_locked">Tùy chỉnh màu sắc (Locked)</string>
     <string name="customize_widget_colors">Tùy chỉnh màu widget</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Sử dụng tiếng anh</string>
     <string name="show_hidden_items">Hiển thị các mục ẩn</string>
     <string name="font_size">Cỡ chữ</string>
