--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -458,6 +458,7 @@
     <string name="customize_colors">自定义颜色</string>
     <string name="customize_colors_locked">自定义颜色 (Locked)</string>
     <string name="customize_widget_colors">自定义小部件颜色</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">强制使用英语语言</string>
     <string name="show_hidden_items">显示隐藏的项目</string>
     <string name="font_size">字体大小</string>
