--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -458,6 +458,7 @@
     <string name="customize_colors">自訂顏色</string>
     <string name="customize_colors_locked">自訂顏色 (Locked)</string>
     <string name="customize_widget_colors">自訂小工具顏色</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">強制使用英語</string>
     <string name="show_hidden_items">顯示隱藏的項目</string>
     <string name="font_size">字體大小</string>
