--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Προσαρμογή χρωμάτων</string>
     <string name="customize_colors_locked">Προσαρμογή χρωμάτων (Κλειδωμένο)</string>
     <string name="customize_widget_colors">Προσαρμογή χρωμάτων widget</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Χρήση γλώσσας English</string>
     <string name="show_hidden_items">Εμφάνιση κρυφών στοιχείων</string>
     <string name="font_size">Μέγεθος κειμένου</string>
