--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">התאם צבעים</string>
     <string name="customize_colors_locked">התאם צבעים (Locked)</string>
     <string name="customize_widget_colors">התאם צבעי יישומון</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">השתמש בשפה האנגלית</string>
     <string name="show_hidden_items">הצג פריטים מוסתרים</string>
     <string name="font_size">גודל פונט</string>
