--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -456,6 +456,7 @@
     <string name="customize_colors">테마 및 색상 설정</string>
     <string name="customize_colors_locked">테마 및 색상 설정 (Locked)</string>
     <string name="customize_widget_colors">위젯 색상 설정</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">영어로 언어 전환</string>
     <string name="show_hidden_items">숨김 항목 보이기</string>
     <string name="font_size">폰트 크기</string>
