--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Tilpass farger</string>
     <string name="customize_colors_locked">Tilpass farger (Locked)</string>
     <string name="customize_widget_colors">Tilpass modulfarger</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Bruk engelsk språk</string>
     <string name="show_hidden_items">Vis skjulte elementer</string>
     <string name="font_size">Skriftstørrelse</string>
