--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Personalizar cores</string>
     <string name="customize_colors_locked">Personalizar cores (Locked)</string>
     <string name="customize_widget_colors">Personalizar cores de widget</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Usar o idioma inglês</string>
     <string name="show_hidden_items">Exibir itens ocultos</string>
     <string name="font_size">Tamanho do texto</string>
