--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -523,6 +523,7 @@
     <string name="customize_colors">Настройки интерфейса</string>
     <string name="customize_colors_locked">Настройки интерфейса (заблокировано)</string>
     <string name="customize_widget_colors">Настроить цвета виджета</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Использовать английский язык</string>
     <string name="show_hidden_items">Показывать скрытые папки</string>
     <string name="font_size">Размер шрифта</string>
