--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Renkleri özelleştir</string>
     <string name="customize_colors_locked">Renkleri özelleştir (Locked)</string>
     <string name="customize_widget_colors">Widget renklerini özelleştir</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">İngilizce dilini kullan</string>
     <string name="show_hidden_items">Gizli öğeleri göster</string>
     <string name="font_size">Yazı tipi boyutu</string>
