--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -490,6 +490,7 @@
     <string name="customize_colors">Customize colors</string>
     <string name="customize_colors_locked">Customize colors (Locked)</string>
     <string name="customize_widget_colors">Customize widget colors</string>
+    <string name="customize_notifications">Customize notifications</string>
     <string name="use_english_language">Use English language</string>
     <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">Font size</string>
