--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Ezarpenak ondo esportatu dira</string>
     <string name="settings_imported_successfully">Ezarpenak ondo inportatu dira</string>
     <string name="start_name_with_surname">Hasi izane abizenarekin</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Ikusgaitasuna</string>
