--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Asetukset viety onnistuneesti</string>
     <string name="settings_imported_successfully">Asetukset tuotu onnistuneesti</string>
     <string name="start_name_with_surname">Aloita sukunimellä</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Näkyvyys</string>
