--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">הגדרות הוצאו בהצלחה</string>
     <string name="settings_imported_successfully">הגדרות יובאו בהצלחה</string>
     <string name="start_name_with_surname">התחל שם בשם משפחה</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">נראות</string>
