--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -488,6 +488,7 @@
     <string name="settings_exported_successfully">설정 내보내기 완료</string>
     <string name="settings_imported_successfully">설정 가져오기 완료</string>
     <string name="start_name_with_surname">성을 먼저 표시</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">표시</string>
