--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Innstillinger eksportert</string>
     <string name="settings_imported_successfully">Innstillinger importert</string>
     <string name="start_name_with_surname">Start name with surname</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighet</string>
