--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Configurações exportadas com sucesso</string>
     <string name="settings_imported_successfully">Configurações importadas com sucesso</string>
     <string name="start_name_with_surname">Ordenar por sobrenome</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilidade</string>
