--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -585,6 +585,7 @@
     <string name="settings_exported_successfully">Nastavitve uspešno izvožene</string>
     <string name="settings_imported_successfully">Nastavitve uspešno uvožene</string>
     <string name="start_name_with_surname">Start name with surname</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Vidljivost</string>
