--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -521,6 +521,7 @@
     <string name="settings_exported_successfully">Подешавања извежена успешно</string>
     <string name="settings_imported_successfully">Подешавања увежена успешно</string>
     <string name="start_name_with_surname">Start name with surname</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Видљивост</string>
