--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Ayarlar başarıyla dışa aktarıldı</string>
     <string name="settings_imported_successfully">Ayarlar başarıyla içe aktarıldı</string>
     <string name="start_name_with_surname">Soyadı ile başla</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Görünürlük</string>
