--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Cài đặt được xuất thành công</string>
     <string name="settings_imported_successfully">Cài đặt được nhập thành công</string>
     <string name="start_name_with_surname">Start name with surname</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Hiển thị</string>
