--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -520,6 +520,7 @@
     <string name="settings_exported_successfully">تم تصدير الإعدادات بنجاح</string>
     <string name="settings_imported_successfully">تم إستيراد الإعدادات بنجاح</string>
     <string name="start_name_with_surname">الاسم يبدأ بالشهرة</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">الرؤية</string>
