--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Ajustaments exportats correctament</string>
     <string name="settings_imported_successfully">Ajustaments importats correctament</string>
     <string name="start_name_with_surname">Start name with surname</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilitat</string>
