--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -646,6 +646,7 @@
     <string name="settings_exported_successfully">Allforiwyd gosodiadau yn llwyddiannus</string>
     <string name="settings_imported_successfully">Mewnforiwyd gosodiadau yn llwyddiannus</string>
     <string name="start_name_with_surname">Dangos enw gyda\'r cyfenw gyntaf</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Gweladwyedd</string>
