--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Axustes exportados correctamente</string>
     <string name="settings_imported_successfully">Axustes importados correctamente</string>
     <string name="start_name_with_surname">Empezar o nome cos apelidos</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilidade</string>
