--- a/commons/src/main/res/values-ne/strings.xml
+++ b/commons/src/main/res/values-ne/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Settings exported successfully</string>
     <string name="settings_imported_successfully">Settings imported successfully</string>
     <string name="start_name_with_surname">Start name with surname</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibility</string>
