--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Inställningarna har exporterats</string>
     <string name="settings_imported_successfully">Inställningarna har importerats</string>
     <string name="start_name_with_surname">Visa efternamn först</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighet</string>
