--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -522,6 +522,7 @@
     <string name="settings_exported_successfully">Налаштування успішно експортовано</string>
     <string name="settings_imported_successfully">Налаштування успішно імпортовано</string>
     <string name="start_name_with_surname">Показувати спочатку прізвище</string>
+    <string name="clear_cache">Clear cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Відображення</string>
