--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -522,7 +522,7 @@
     <string name="settings_exported_successfully">Instellingen geëxporteerd</string>
     <string name="settings_imported_successfully">Instellingen geïmporteerd</string>
     <string name="start_name_with_surname">Beginnen met achternaam</string>
-    <string name="clear_cache">Clear cache</string>
+    <string name="clear_cache">Cache opschonen</string>
 
     <!-- Setting sections -->
     <string name="visibility">Opmaak</string>
