--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -758,8 +758,8 @@
     <string name="faq_9_text_commons">Il y a plusieurs façon de faire cela. La première est de passer en mode de sélection en appuyant longuement sur un objet, puis en cliquant simplement sur les autres objets pour les sélectionner. La deuxième est similaire à la sélection d\'objets sur PC avec une souris,
         passez en mode de sélection en appuyant longuement sur un objet, puis en maintenant votre doigt appuyé, glissez le sur plusieurs objets pour les sélectionner. La troisième façon de sélectionner plusieurs objets est d\'appuyer longuement sur un objet, puis appuyer longuement sur un autre et tout ce qui sera entre les deux objets sera sélectionné. Si vous
         voulez sélectionner tous les objets, appuyez longuement sur un objet, et cliquez sur le compteur de sélection dans le coin supérieur gauche. Cela sélectionnera ou désélectionnera tous les objets.</string>
-    <string name="faq_10_title_commons">J'ai acheté l'application, mais je ne peux pas la télécharger sur un autre appareil.</string>
-    <string name="faq_10_text_commons">Essayez de vider le cache de votre application Google Play et de redémarrer votre appareil. C'est un problème de Google Play, pas vraiment lié à l'application elle-même.</string>
+    <string name="faq_10_title_commons">J\'ai acheté l\'application, mais je ne peux pas la télécharger sur un autre appareil.</string>
+    <string name="faq_10_text_commons">Essayez de vider le cache de votre application Google Play et de redémarrer votre appareil. C\'est un problème de Google Play, pas vraiment lié à l\'application elle-même.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
     <string name="why_upgrade">Obtenez la version Pro maintenant !</string>
