Updated fi translation

--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -490,7 +490,7 @@
     <string name="customize_colors">Muokkaa sovelluksen värejä</string>
     <string name="customize_colors_locked">Muokkaa sovelluksen värejä (Locked)</string>
     <string name="customize_widget_colors">Mukauta pienoissovelluksen värejä</string>
-    <string name="customize_notifications">Customize notifications</string>
+    <string name="customize_notifications">Mukauta ilmoituksia</string>
     <string name="use_english_language">Käytä englannin kieltä</string>
     <string name="show_hidden_items">Näytä piilotetut tiedostot</string>
     <string name="font_size">Fonttikoko</string>
@@ -522,7 +522,7 @@
     <string name="settings_exported_successfully">Asetukset viety onnistuneesti</string>
     <string name="settings_imported_successfully">Asetukset tuotu onnistuneesti</string>
     <string name="start_name_with_surname">Aloita sukunimellä</string>
-    <string name="clear_cache">Clear cache</string>
+    <string name="clear_cache">Tyhjennä välimuisti</string>
 
     <!-- Setting sections -->
     <string name="visibility">Näkyvyys</string>
