--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -490,7 +490,7 @@
     <string name="customize_colors">Rediger farver</string>
     <string name="customize_colors_locked">Rediger farver (Låst)</string>
     <string name="customize_widget_colors">Rediger widget-farver</string>
-    <string name="customize_notifications">Customize notifications</string>
+    <string name="customize_notifications">Tilpas notifikationer</string>
     <string name="use_english_language">Anvend engelsk sprog</string>
     <string name="show_hidden_items">Vis skjulte elementer</string>
     <string name="font_size">Skriftstørrelse</string>
@@ -522,7 +522,7 @@
     <string name="settings_exported_successfully">Indstillinger eksporteret</string>
     <string name="settings_imported_successfully">Indstillinger importeret</string>
     <string name="start_name_with_surname">Start navn med efternavn</string>
-    <string name="clear_cache">Clear cache</string>
+    <string name="clear_cache">Ryd cache</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighed</string>
