--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -5,15 +5,15 @@
     <string name="file_saved">文件保存成功</string>
     <string name="invalid_file_format">无效文件格式</string>
     <string name="out_of_memory_error">内存不足</string>
-    <string name="an_error_occurred">啊哦，出错啦： %s</string>
+    <string name="an_error_occurred">啊哦，出错啦：%s</string>
     <string name="open_with">打开方式</string>
     <string name="edit_with">编辑方式</string>
     <string name="no_app_found">未找到可用应用</string>
     <string name="set_as">设置为</string>
     <string name="copy_to_clipboard">复制到剪贴板</string>
-    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
+    <string name="copy_number_to_clipboard">复制号码到剪贴板</string>
     <string name="value_copied_to_clipboard">颜色值已复制到剪贴板</string>
-    <string name="dial_number">Dial number</string>
+    <string name="dial_number">拨号</string>
     <string name="unknown">未知</string>
     <string name="always">总是</string>
     <string name="never">从不</string>
@@ -255,7 +255,7 @@
     <string name="share">分享</string>
     <string name="share_via">分享到</string>
     <string name="select_all">全选</string>
-    <string name="select_text">Select text</string>
+    <string name="select_text">选择文本</string>
     <string name="hide">隐藏</string>
     <string name="unhide">取消隐藏</string>
     <string name="hide_folder">隐藏文件夹</string>
@@ -269,9 +269,9 @@
     <string name="print">打印</string>
     <string name="create_shortcut">创建快捷方式</string>
     <string name="add_number_to_contact">添加号码至联系人</string>
-    <string name="view_contact_details">View contact details</string>
-    <string name="call_from_sim_1">Call from SIM 1</string>
-    <string name="call_from_sim_2">Call from SIM 2</string>
+    <string name="view_contact_details">查看联系人详情</string>
+    <string name="call_from_sim_1">来自 SIM 1 的通话</string>
+    <string name="call_from_sim_2">来自 SIM 2 的通话</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
@@ -291,9 +291,9 @@
     <string name="first_name">名字</string>
     <string name="middle_name">中间名</string>
     <string name="surname">姓氏</string>
-    <string name="full_name">Full name</string>
-    <string name="use_custom_sorting">Use custom sorting</string>
-    <string name="change_order">Change order</string>
+    <string name="full_name">全名</string>
+    <string name="use_custom_sorting">使用自定义排序</string>
+    <string name="change_order">更改排序</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">是否执行此删除操作？</string>
@@ -454,11 +454,11 @@
 
     <!-- Settings -->
     <string name="settings">设置</string>
-    <string name="purchase_simple_thank_you">购买 Simple Thank You</string>
+    <string name="purchase_simple_thank_you">感谢购买</string>
     <string name="customize_colors">自定义颜色</string>
     <string name="customize_colors_locked">自定义颜色 (Locked)</string>
     <string name="customize_widget_colors">自定义小部件颜色</string>
-    <string name="customize_notifications">Customize notifications</string>
+    <string name="customize_notifications">自定义通知</string>
     <string name="use_english_language">强制使用英语语言</string>
     <string name="show_hidden_items">显示隐藏的项目</string>
     <string name="font_size">字体大小</string>
@@ -490,7 +490,7 @@
     <string name="settings_exported_successfully">设置导出成功</string>
     <string name="settings_imported_successfully">设置导入成功</string>
     <string name="start_name_with_surname">姓氏在前</string>
-    <string name="clear_cache">Clear cache</string>
+    <string name="clear_cache">清除缓存</string>
 
     <!-- Setting sections -->
     <string name="visibility">可见度</string>
