adding a string for toggling filename visibility, from the gallery

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -275,6 +275,7 @@
     <string name="view_contact_details">Ver detalles de contacto</string>
     <string name="call_from_sim_1">Llamar desde SIM 1</string>
     <string name="call_from_sim_2">Llamar desde SIM 2</string>
+    <string name="toggle_filename">Cambiar la visibilidad del nombre de archivo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
