--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -275,6 +275,7 @@
     <string name="view_contact_details">Ikusi kontaktuaren xehetasunak</string>
     <string name="call_from_sim_1">Deitu 1. SIMetik</string>
     <string name="call_from_sim_2">Deitu 2. SIMetik</string>
+    <string name="toggle_filename">Aldatu fitxategi-izenaren ikusgaitasuna</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenatze-irizpidea</string>
