--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -275,6 +275,7 @@
     <string name="view_contact_details">Näytä yhteystieto</string>
     <string name="call_from_sim_1">Soita SIM 1-kortilla</string>
     <string name="call_from_sim_2">Soita SIM 2-kortilla</string>
+    <string name="toggle_filename">Tiedostonimien näkyvyys</string>
 
     <!-- Sorting -->
     <string name="sort_by">Järjestä</string>
