--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -275,6 +275,7 @@
     <string name="view_contact_details">Contactgegevens</string>
     <string name="call_from_sim_1">Met SIM 1 bellen</string>
     <string name="call_from_sim_2">Met SIM 2 bellen</string>
+    <string name="toggle_filename">Bestandsnamen tonen</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
