--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -279,6 +279,7 @@
     <string name="view_contact_details">Просмотр данных контакта</string>
     <string name="call_from_sim_1">Вызов с SIM 1</string>
     <string name="call_from_sim_2">Вызов с SIM 2</string>
+    <string name="toggle_filename">Переключить отображение имени файла</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортировать по…</string>
