--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -272,6 +272,7 @@
     <string name="view_contact_details">查看联系人详情</string>
     <string name="call_from_sim_1">来自 SIM 1 的通话</string>
     <string name="call_from_sim_2">来自 SIM 2 的通话</string>
+    <string name="toggle_filename">显示文件名</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
