--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -275,6 +275,7 @@
     <string name="view_contact_details">Veure els detalls de contacte</string>
     <string name="call_from_sim_1">Truca des de la SIM 1</string>
     <string name="call_from_sim_2">Truca des de la SIM 2</string>
+    <string name="toggle_filename">Canviar la visibilitat del nom d’arxiu</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
