--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -275,6 +275,7 @@
     <string name="view_contact_details">Προβολή λεπτομερειών επαφής</string>
     <string name="call_from_sim_1">Call from SIM 1</string>
     <string name="call_from_sim_2">Call from SIM 2</string>
+    <string name="toggle_filename">Αλλαγή προβολής ονόματος αρχείων</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ταξινόμηση κατά</string>
