--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -275,6 +275,7 @@
     <string name="view_contact_details">Afficher les détails du contact</string>
     <string name="call_from_sim_1">Appeler depuis SIM 1</string>
     <string name="call_from_sim_2">Appeler depuis SIM 2</string>
+    <string name="toggle_filename">Permuter l\'affichage des noms de fichier</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
