--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -271,6 +271,7 @@
     <string name="view_contact_details">連絡先の詳細を表示</string>
     <string name="call_from_sim_1">SIM 1 から電話</string>
     <string name="call_from_sim_2">SIM 2 から電話</string>
+    <string name="toggle_filename">ファイル名の表示を切り替え</string>
 
     <!-- Sorting -->
     <string name="sort_by">並べ替え</string>
