--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -279,6 +279,7 @@
     <string name="view_contact_details">Zobraziť detaily kontaktu</string>
     <string name="call_from_sim_1">Zavolať zo SIM 1</string>
     <string name="call_from_sim_2">Zavolať zo SIM 2</string>
+    <string name="toggle_filename">Prepnúť viditeľnosť názvov súborov</string>
 
     <!-- Sorting -->
     <string name="sort_by">Na zoradenie použiť</string>
