--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -483,6 +483,8 @@
     <string name="your_sounds">Your sounds</string>
     <string name="add_new_sound">Add a new sound</string>
     <string name="no_sound">No sound</string>
+    <string name="during_day_at_x">During the day at XX:XX</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Settings</string>
